changeset/sales event/objects/Sales_Event_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Default_Org_Wide_Address__c</fullName>
        <label>Default Org. Wide Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Email_Template_Prefix__c</fullName>
        <label>1. Email Template Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Email_Template_Prefix__c</fullName>
        <label>2. Email Template Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_Email_Template_Prefix__c</fullName>
        <label>3. Email Template Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Event Settings</label>
</CustomObject>